--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | webgl</title>
+    <title>Unity WebGL Player | 2020</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/public.loader.js"></script>
+    <script src="Build/c2209bc3d9e081fdffe8f441b54c2aba.js"></script>
     <script>
-      var unityInstance = createUnityInstance("unityContainer", "Build/public.json", {onProgress: UnityProgress});
+      var unityInstance = createUnityInstance("unityContainer", "Build/4c2623c5647df3a834568413462a0993.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">webgl</div>
+        <div class="title">2020</div>
       </div>
     </div>
   </body>
