--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="en-us">
+﻿<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 2020</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/c2209bc3d9e081fdffe8f441b54c2aba.js"></script>
-    <script>
-      var unityInstance = createUnityInstance("unityContainer", "Build/4c2623c5647df3a834568413462a0993.json", {onProgress: UnityProgress});
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="game.js"></script>
+    <script>window.addEventListener('load',function(){ut._HTML.main()})</script>
+    <title>MatchThree</title>
   </head>
   <body>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">2020</div>
-      </div>
-    </div>
   </body>
 </html>
